centered content, fixed color scheme

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <h1>Justus Brown</h1>
         <ul>
-            <li> <a href="#about-section">About</a></li>
-            <li> <a href="#work-section">Work</a></li>
-            <li> <a href="#contact-section">Contact Me</a></li>
+            <li> <a href="#about">About</a></li>
+            <li> <a href="#work">Work</a></li>
+            <li> <a href="#contact">Contact Me</a></li>
             <li> <a href="#">Resume</a></li>
         </ul>
     </header>
@@ -23,11 +23,11 @@
         <figure class = "hero"></figure>
 
         <section class="flexion-section">
-            <section id="about-section" class="section-heading">
+            <section id="about" class="section-heading">
                 <h2>About</h2>
             </section>
 
-            <section>
+            <section class="content-section">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste impedit aspernatur in. Provident odio a vero ad commodi soluta rem, repudiandae debitis illo veniam, reiciendis cum eum. Suscipit, ratione quidem.</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste impedit aspernatur in. Provident odio a vero ad commodi soluta rem, repudiandae debitis illo veniam, reiciendis cum eum. Suscipit, ratione quidem.</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste impedit aspernatur in. Provident odio a vero ad commodi soluta rem, repudiandae debitis illo veniam, reiciendis cum eum. Suscipit, ratione quidem.</p>
@@ -38,11 +38,11 @@
         <br>
 
         <section class="flexion-section">
-            <section id="work-section" class="section-heading">
+            <section id="work" class="section-heading">
                 <h2>Work</h2>
             </section>
 
-            <section class="content-section">
+            <section class="work-section content-section">
                 <section class="project-card main-project">
                     <img src="https://place-puppy.com/public-images/index-page/image8/210x280-lg.jpg" alt="Placeholder image of a puppy">
                     <p> Placeholder text</p>
@@ -61,15 +61,15 @@
         <br> 
 
         <section class="flexion-section">
-            <section id="contact-section" class="section-heading">
+            <section id="contact" class="section-heading">
                 <h2>Contact Me</h2>
             </section>
             
-            <ul>
+            <ul class="content-section contact-list">
                 <li> <a href="#">555.555.5555</a></li>
-                <li> <a href="#">555.555.5555</a></li>
-                <li> <a href="#">555.555.5555</a></li>
-                <li> <a href="#">555.555.5555</a></li>
+                <li> <a href="#">test@gmail.com</a></li>
+                <li> <a href="#">Github</a></li>
+                <li> <a href="#">Twitter</a></li>
             </ul>
 
         </section>
