--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
         </ul>
     </header>
 
+    <figure>
+        <h2>Cool Subtitle</h2>
+        
+    </figure>
+    <br>
+
     <main>
-
-        <figure class = "hero"></figure>
-
         <section class="flexion-section">
             <section id="about" class="section-heading">
                 <h2>About</h2>
@@ -34,7 +37,6 @@
             </section>
 
         </section>
-
         <br>
 
         <section class="flexion-section">
@@ -44,15 +46,23 @@
 
             <section class="work-section content-section">
                 <section class="project-card main-project">
-                    <img src="https://place-puppy.com/public-images/index-page/image8/210x280-lg.jpg" alt="Placeholder image of a puppy">
+                    <img src="https://via.placeholder.com/400x200" alt="Placeholder image of a puppy">
                     <p> Placeholder text</p>
                 </section>
                 <section class="project-card">
-                    <img src="https://place-puppy.com/public-images/index-page/image8/210x280-lg.jpg" alt="Placeholder image of a puppy">
+                    <img src="https://via.placeholder.com/200x200" alt="Placeholder image of a puppy">
                     <p> Placeholder text</p>
                 </section>
                 <section class="project-card">
-                    <img src="https://place-puppy.com/public-images/index-page/image8/210x280-lg.jpg" alt="Placeholder image of a puppy">
+                    <img src="https://via.placeholder.com/200x200" alt="Placeholder image of a puppy">
+                    <p> Placeholder text</p>
+                </section>
+                <section class="project-card">
+                    <img src="https://via.placeholder.com/200x200" alt="Placeholder image of a puppy">
+                    <p> Placeholder text</p>
+                </section>
+                <section class="project-card">
+                    <img src="https://via.placeholder.com/200x200" alt="Placeholder image of a puppy">
                     <p> Placeholder text</p>
                 </section>
             </section>
@@ -68,13 +78,19 @@
             <ul class="content-section contact-list">
                 <li> <a href="#">555.555.5555</a></li>
                 <li> <a href="#">test@gmail.com</a></li>
-                <li> <a href="#">Github</a></li>
-                <li> <a href="#">Twitter</a></li>
+                <li> <a href="https://github.com/brownj47">Github</a></li>
+                <li> <a href="https://twitter.com/">Twitter</a></li>
             </ul>
 
         </section>
 
+        <footer>
+            <h3>Image Credit</h3>
+            <p class="attribution">"<a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/97123293@N07/15038954529">Red currant. Ribes rubrum. Choix des plus belles fleurs: et des plus beaux fruits par P.J. Redouté, t. 3, (1833)</a>" by <a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/97123293@N07">Swallowtail Garden Seeds</a> is marked with <a target="_blank" rel="noopener noreferrer" href="https://creativecommons.org/publicdomain/mark/1.0/?ref=openverse">Public Domain Mark 1.0 <img src="https://mirrors.creativecommons.org/presskit/icons/pd.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img></a>. </p>
+        </footer>
+
     </main>
+    <br>
     
 </body>
 </html>
