added descriptive comments, added variables, reset styling and manually restyled, wrote some real snippets in the about section

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Justus Brown's Portfolio</title>
+    <link rel="stylesheet" href="./assets/reset.css"> <!--reset styling-->
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <header>
         <h1>Justus Brown</h1>
-        <ul>
+        <ul> <!--navbar-->
             <li> <a href="#about">About</a></li>
             <li> <a href="#work">Work</a></li>
             <li> <a href="#contact">Contact Me</a></li>
@@ -19,7 +20,7 @@
     </header>
 
     <figure>
-        <h2>Cool Subtitle</h2>
+        <h2>Web Development</h2> <!--subtitle-->
     </figure>
     <br>
 
@@ -30,10 +31,9 @@
             </section>
 
             <section class="content-section">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste impedit aspernatur in. Provident odio a vero ad commodi soluta rem, repudiandae debitis illo veniam, reiciendis cum eum. Suscipit, ratione quidem.</p>
                 <img class= "profile-pic"src="./assets/IMG_3305 (1).JPG" alt="Profile picture">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste impedit aspernatur in. Provident odio a vero ad commodi soluta rem, repudiandae debitis illo veniam, reiciendis cum eum. Suscipit, ratione quidem.</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste impedit aspernatur in. Provident odio a vero ad commodi soluta rem, repudiandae debitis illo veniam, reiciendis cum eum. Suscipit, ratione quidem.</p>
+                <p>Hello! Welcome to my portfolio page. My name is Justus Brown. I am new to web development, but am here and ready to learn. </p>
+                <p>Showcased below are some of my projects. At the moment, I only have one active project, but will hopefully fill more of the space out soon.</p>
             </section>
 
         </section>
@@ -88,7 +88,7 @@
             </section>
             
             <ul class="content-section contact-list">
-                <li> <a href="#">555.555.5555</a></li>
+                <li> <a href="#">555.555.5555</a></li> <!--list of ways to contact me-->
                 <li> <a href="#">test@gmail.com</a></li>
                 <li> <a href="https://github.com/brownj47">Github</a></li>
                 <li> <a href="https://twitter.com/">Twitter</a></li>
@@ -98,6 +98,7 @@
 
         <footer>
             <h3>Image Credit</h3> <!--Giving credit for hero image-->
+            <br>
             <p class="attribution">"<a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/97123293@N07/15038954529">Red currant. Ribes rubrum. Choix des plus belles fleurs: et des plus beaux fruits par P.J. Redouté, t. 3, (1833)</a>" by <a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/97123293@N07">Swallowtail Garden Seeds</a> is marked with <a target="_blank" rel="noopener noreferrer" href="https://creativecommons.org/publicdomain/mark/1.0/?ref=openverse">Public Domain Mark 1.0 <img src="https://mirrors.creativecommons.org/presskit/icons/pd.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img></a>. </p>
         </footer>
 
