--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Justus Brown's Portfolio</title>
-    <link rel="stylesheet" href="./assets/reset.css"> <!--reset styling-->
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/css/reset.css"> <!--reset styling-->
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header>
@@ -31,7 +31,7 @@
             </section>
 
             <section class="content-section">
-                <img class= "profile-pic"src="./assets/IMG_3305 (1).JPG" alt="Profile picture">
+                <img class= "profile-pic"src="./assets/images/IMG_3305 (1).JPG" alt="Profile picture">
                 <p>Hello! Welcome to my portfolio page. My name is Justus Brown. I am new to web development, but am here and ready to learn. </p>
                 <p>Showcased below are some of my projects. At the moment, I only have one active project, but will hopefully fill more of the space out soon.</p>
             </section>
@@ -47,7 +47,7 @@
             <section class="work-section content-section">
                 <a href="https://brownj47.github.io/Bootcamp-Challenge-01_Accessibilty/"> <!--make whole section a link-->
                     <section class="project-card main-project">
-                        <img src="./assets/horiseon-image.png" alt="Placeholder image of a puppy">
+                        <img src="./assets/images/horiseon-image.png" alt="Placeholder image of a puppy">
                         <p> <a href="https://brownj47.github.io/Bootcamp-Challenge-01_Accessibilty/">Accessibility Refactoring</a></p>
                     </section>
                 </a>
