changed image in figure div, changed credit info, added to readme

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
         </section>
 
         <footer>
-            <h3>Image Credit</h3> <!--Giving credit for hero image-->
+            <h3>Image Credit for image in figure setion</h3> <!--Giving credit for hero image-->
             <br>
-            <p class="attribution">"<a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/97123293@N07/15038954529">Red currant. Ribes rubrum. Choix des plus belles fleurs: et des plus beaux fruits par P.J. Redouté, t. 3, (1833)</a>" by <a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/97123293@N07">Swallowtail Garden Seeds</a> is marked with <a target="_blank" rel="noopener noreferrer" href="https://creativecommons.org/publicdomain/mark/1.0/?ref=openverse">Public Domain Mark 1.0 <img src="https://mirrors.creativecommons.org/presskit/icons/pd.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img></a>. </p>
+            <p class="attribution">"<a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/23975018@N04/2918156184">The Wave. Picture taken on the Wave at the Vermilion Cliffs/Coyote Buttes North</a>" by <a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/23975018@N04/">DIVA007</a> is marked with <a target="_blank" rel="noopener noreferrer" href="https://creativecommons.org/licenses/by/4.0/?ref=openverse">CC BY 4.0 <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img></a>. </p>
         </footer>
 
     </main>
